frontend/test/should_fail/computations_no_break_continue_003.grg
test t()
{
	independent {
		yield {
			if(true) {
				continue;
			}
		}
	}
}
